# typstfmt

./: .justfile  CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  import.rs  lib.rs  main.rs  markup.rs  params.rs
src/tests/: import.rs  mod.rs  params.rs
src/tests/snapshots/: typstfmt__tests__comments__array_end_comment__snapshot.snap  typstfmt__tests__comments__many_comments__snapshot.snap  typstfmt__tests__comments__param_comment__snapshot.snap  typstfmt__tests__comments__start_with_comment__snapshot.snap  typstfmt__tests__import__import_items_multiline_narrow__snapshot.snap  typstfmt__tests__import__import_items_multiline_wide__snapshot.snap  typstfmt__tests__import__import_items_one_line_narrow__snapshot.snap  typstfmt__tests__import__import_items_one_line_wide__snapshot.snap  typstfmt__tests__lists__enumeration__snapshot.snap  typstfmt__tests__lists__list__snapshot.snap  typstfmt__tests__params__call_func_long__snapshot.snap  typstfmt__tests__params__call_func_long_trailing__snapshot.snap  typstfmt__tests__params__code_func_break__snapshot.snap  typstfmt__tests__params__code_func_break_nested__snapshot.snap  typstfmt__tests__params__many_long_parameters__snapshot.snap
