[package]
name = "typstfmt"
version = "0.13.0"
edition = "2021"
authors = ["Astrale <ash4567@outlook.fr>"]
rust-version = "1.74"
description = "A formatter for Typst-lang without a future!"
readme = "README.md"
repository = "https://github.com/astrale-sharp/typstfmt"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "typstfmt"
[dependencies]
lexopt = "0.3.0"
itertools = "0.14.0"
regex = "1.7.3"
toml = "0.8.20"
tracing = { version = "0.1.37", features = ["attributes"] }
typst-syntax = "0.13.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
unicode-width = "0.2.0"

[dev-dependencies]
similar-asserts = "1.7.0"
insta = "1.42.2"
tracing-subscriber = "0.3.17"
[[bin]]
name = "typstfmt"
